# cpace-ts

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  release-please-config.json  rust-toolchain.toml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  tsconfig.vitest.json  tsup.config.ts  vitest.config.ts
.husky/: pre-push
crates/cpace-wasm/: Cargo.toml
crates/cpace-wasm/src/: lib.rs
src/: bytes.ts  cpace-audit.ts  cpace-crypto.ts  cpace-errors.ts  cpace-group-x25519.ts  cpace-message.ts  cpace-session.ts  cpace-strings.ts  cpace-transcript.ts  cpace-validation.ts  crypto-backend.ts  derive-keys.ts  elligator2-curve25519.ts  hash.ts  index.ts  pkcs8.ts  rfc7748.ts  x25519-noble.ts  x25519-webcrypto.ts
test/: bytes.unit.test.ts  cpace-b1.1.x25519.unit.test.ts  cpace-b1.10.x25519.unit.test.ts  cpace-b1.2.x25519.unit.test.ts  cpace-b1.3.x25519.unit.test.ts  cpace-b1.4.x25519.unit.test.ts  cpace-b1.5.x25519.unit.test.ts  cpace-b1.6.x25519.unit.test.ts  cpace-b1.7.x25519.unit.test.ts  cpace-generator.edgecases.unit.test.ts  cpace-group-x25519.errors.unit.test.ts  cpace-scalarMultVfy-msb.unit.test.ts  cpace-session.audit.unit.test.ts  cpace-session.finish.unit.test.ts  cpace-session.validation.unit.test.ts  cpace-strings.unit.test.ts  cpace-symmetric-ad.unit.test.ts  cpace-testvectors-b1-loworder.ts  cpace-testvectors-b1.ts  cpace.binding-ad.integration.test.ts  cpace.binding-ci.integration.test.ts  cpace.binding-sid.integration.test.ts  cpace.fuzz.integration.test.ts  cpace.generator.longstrings.unit.test.ts  helpers.ts  (+5 more)
(+5 files in other folders)
